@@ -1,3 +1,5 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: ????
+  Changes:
+    - [item=hps__is-inventory-sensor] Move to circuit-input subgroup if SchallCircuitGroup is installed.
